# geese

crates/goose-cli/src/session/: builder.rs  mod.rs
crates/goose/src/: hydrator.rs  lib.rs
crates/goose/src/agents/platform_extensions/developer/: edit.rs  harness.rs  mod.rs
devbox/: devbox_manager.py  test_devbox_manager.py
minion/: RULES.md  goose_wrapper.py  hydrate_context.sh  minion  setup_env.sh  teardown.sh  validate.py
toolshed/: README.md  pyproject.toml
toolshed/src/toolshed/: __init__.py  server.py
